--- a/src/main/resources/configurations/projectservice.yml
+++ b/src/main/resources/configurations/projectservice.yml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create # validate for production, create for early development, update for development
+      ddl-auto: update # validate for production, create for early development, update for development
     show-sql: true
     properties:
       hibernate:
@@ -40,3 +40,13 @@ eureka:
 application:
   cofig:
     userclienturl: http://localhost:8090/api/v1
+
+aws:
+  region: eu-north-1
+  s3:
+    bucket-name: spshpau-bucket
+    presigned-url-duration-minutes: 15
+
+    credentials:
+      access-key-id: # Insert here
+      secret-access-key: # Insert here
