--- a/src/main/resources/configurations/gateway.yml
+++ b/src/main/resources/configurations/gateway.yml
@@ -3,45 +3,61 @@ spring:
     name: gateway
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins:
+              - "http://localhost:5173"
+              - "http://192.168.1.121:5173"
+            allowedMethods: [ "GET", "POST", "PUT", "DELETE", "OPTIONS", "HEAD", "PATCH" ]
+            allowedHeaders: "*"
+            allowCredentials: true
+            exposedHeaders: "*"
+            maxAge: 3600
       discovery:
         locator:
           enabled: false
       routes:
         # --- User Service Paths ---
         - id: users_route
-          uri: http://localhost:8090
+          uri: http://userservice:8090
           predicates:
             - Path=/api/v1/users/**
 
         - id: genres_route
-          uri: http://localhost:8090
+          uri: http://userservice:8090
           predicates:
             - Path=/api/v1/genres/**
 
         - id: skills_route
-          uri: http://localhost:8090
+          uri: http://userservice:8090
           predicates:
             - Path=/api/v1/skills/**
 
         - id: interactions_route
-          uri: http://localhost:8090
+          uri: http://userservice:8090
           predicates:
             - Path=/api/v1/interactions/**
 
         # --- Chat Service Paths ---
         - id: messages_route
-          uri: http://localhost:8091
+          uri: http://chatservice:8091
           predicates:
             - Path=/api/v1/messages/**
 
         - id: chats_route
-          uri: http://localhost:8091
+          uri: http://chatservice:8091
           predicates:
             - Path=/api/v1/chats/**
 
+        - id: chatservice_websocket_route
+          uri: http://chatservice:8091
+          predicates:
+            - Path=/ws/**
+
         # --- Project Service Paths ---
         - id: projects_route
-          uri: http://localhost:8092
+          uri: http://projectservice:8092
           predicates:
             - Path=/api/v1/projects/**
 
