--- a/src/main/resources/configurations/userservice.yml
+++ b/src/main/resources/configurations/userservice.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: userservice
   datasource:
-    url: jdbc:postgresql://192.168.1.112:5432/spshpau-db
+    url: jdbc:postgresql://postgresqldb:5432/spshpau-db
     username: spshpau
     password: admin
     driver-class-name: org.postgresql.Driver
@@ -35,4 +35,4 @@ eureka:
     hostname: localhost
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery-server:8761/eureka
