--- a/src/main/resources/configurations/gateway.yml
+++ b/src/main/resources/configurations/gateway.yml
@@ -16,48 +16,48 @@ spring:
             maxAge: 3600
       discovery:
         locator:
-          enabled: false
+          enabled: true
       routes:
         # --- User Service Paths ---
         - id: users_route
-          uri: http://userservice:8090
+          uri: lb://userservice
           predicates:
             - Path=/api/v1/users/**
 
         - id: genres_route
-          uri: http://userservice:8090
+          uri: lb://userservice
           predicates:
             - Path=/api/v1/genres/**
 
         - id: skills_route
-          uri: http://userservice:8090
+          uri: lb://userservice
           predicates:
             - Path=/api/v1/skills/**
 
         - id: interactions_route
-          uri: http://userservice:8090
+          uri: lb://userservice
           predicates:
             - Path=/api/v1/interactions/**
 
         # --- Chat Service Paths ---
         - id: messages_route
-          uri: http://chatservice:8091
+          uri: lb://chatservice
           predicates:
             - Path=/api/v1/messages/**
 
         - id: chats_route
-          uri: http://chatservice:8091
+          uri: lb://chatservice
           predicates:
             - Path=/api/v1/chats/**
 
         - id: chatservice_websocket_route
-          uri: http://chatservice:8091
+          uri: lb://chatservice
           predicates:
             - Path=/ws/**
 
         # --- Project Service Paths ---
         - id: projects_route
-          uri: http://projectservice:8092
+          uri: lb://projectservice
           predicates:
             - Path=/api/v1/projects/**
 
@@ -65,5 +65,10 @@ server:
   port: 8081
 
 eureka:
+  instance:
+    hostname: localhost
+  client:
+    service-url:
+      defaultZone: http://discovery-server:8761/eureka
   client:
     register-with-eureka: false
